Android: Java7 DatatypeConverter used.
Base64 just supported from Java8.